src/Components/Projects/Projects.scss
@import '../../color.scss';

/*PROJECTS SECTION*/

.projects-section-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100vw;
    height: auto;
    margin-top: 10vh;
    padding:0 5%;
}
.projects-section-header {
    width: 100%;
    height: 10vh;
    max-width: 1400px;

    display: flex;
    align-items: center;
    text-align: left;
    margin-top: 10vh; 
}
.projects-section-main{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: auto;
}

/* PROJECTS HEADER WORDING*/
.projects-header-wording{
    font-family: $font-family;
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 44px;
    color:$heading-text-colors;
}
.projects-header-wording-line{
    border-top: 1px solid #546A93;
    opacity: 0.3;
    margin-left: 2%;
    width: 80%;
}

/*PROJECTS INDIVIDUAL CODE*/

//CONTAINER
.projects-individual{
    display: flex;
    align-items: center;
    flex-wrap: wrap;   
    max-width: 1400px;
    gap: 5%;
    justify-content: center; 
}
.projects-individual-container{
    width: 30%;
    height: 30vh;
    position: relative;
    margin: 1.6rem 0; 
    min-height: 200px;
}
//IMAGE SECTION
.projects-individual-image-div {
    height:100%;
    width: 100%;
    border-radius: 10px;  
}
.projects-individual-image-body {
    height:100%;
    width: 100%;
    object-fit:cover;
    border-radius: 10px;  
    opacity: 1; 
}

//IMAGE HEADER AND OVERLAY PRE HOVER

.projects-individual-shade-pre-click {
    position: absolute;
    display: flex;
    top: 0;

    color: white;
    font-family: $font-family;
    font-size: 1rem;
    padding-top: 4%;
    padding-left: 1.28rem;
    width: 100%;
    height: 60%;
    border-radius: 10px;  
    background-image: linear-gradient( rgb(8, 8, 8, 1), rgba(255, 255, 255, 0));
}
.projects-individual-header-pre-click {
    position: absolute;
    display: flex;
    bottom: 0;

    color: white;
    font-family: $font-family;
    font-size: 1rem;
    padding: 2%;
    padding: 3% 6%;
    padding-bottom: 1%;
    width: 100%;
    height: 100%;
}

//OVERLAY
.projects-individual-image-overlay {
    bottom: 0; 
    position: absolute; 
    display: flex;
    justify-content:  space-between;
    align-items: center;
    flex-direction: column;

    background: rgba(0, 0, 0, 0.85); /* Black see-through */
    transition: .5s ease;
    opacity:0;
    color: white;
    
    border-radius: 10px;
    height: 100%;
    width: 100%;
    padding: 3% 6%;
    padding-bottom: 1%;
}
.projects-individual-container:hover .projects-individual-image-overlay  {
    opacity: 1;
    display: flex;
    justify-content:  space-between;
    align-items: center;
    flex-direction: column;

    border-radius: 10px;
    height: 100%;
    width: 100%;

}
//OVERLAY HEADER
.projects-individual-overlay-header-div {
    display: flex;
    width: 100%;
    height: 15%;
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
}
.projects-individual-overlay-header-text {
    // color: white;
    color: $heading-text-colors;
    font-family: $font-family;
    font-size: 1rem;
    font-weight: 400;
    cursor: pointer;
}

//OVERLAY SUMMARY
.projects-individual-summary-div {
    width: 100%;
    height: 70%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.projects-individual-summary-body {
    font-family: $font-family;
    font-weight: 300;
    font-size: 0.75rem;
    text-align: left;
    color: $secondary-font-color;
}

//OVERLAY TECHNOLOGIES
.projects-individual-tech-div {
    width: 100%;
    height: 20%;  
    display: flex;
    align-items: center;
    border-top: 1px solid #546A93; 
}
.projects-individual-tech-body {
    margin:0.5rem;
    font-family: $font-family;
    font-weight: 300;
    font-size: 0.75rem;
    color: $secondary-font-color;
}
.projects-individual-tech-body:first-child{
    margin-left: 0rem;
}
.projects-individual-tech-body-span{
    color: $heading-text-colors;
}
.projects-individual-tech-body-span:last-child {
    display: none;
}
//OVERLAY ACTION ICONS

.projects-individual-actions-div {
    width: 20%;
    height: 20%;
    gap: 0.8rem;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
.projects-individual-actions-icon {
    transition: ease-out 0.4s;
    font-size: medium;
    color: #ffffff;
    cursor: pointer;


    &:hover{
        color: $heading-text-colors;
    }
}

//MEDIA QUERIES

//DESKTOP

@media(max-width: 1023px){
    .projects-individual-container{
        min-width: 300px;
    }
}
 //TABLET

 @media (max-width: 769px){
    .projects-header-wording {
        font-size: 1.2rem;
    }
    .projects-header-wording em {
        font-size: 1.2rem;
    }
    .projects-section-container {
        margin-top: 0;
    }
}

 //PHONE

@media (max-width: 481px){
    .projects-section-container{
        padding:0%;
    }
    .projects-section-header {
        justify-content: center;
        flex-direction: column;
    }
    .projects-header-wording-line{
        margin-left: 0;
    }
    .projects-header-wording em {
        font-size: 1rem;
    }
    .projects-header-wording em {
        font-size: 1rem;
    }
    .projects-individual-container {
        width: 25%;
        height: 25vh;
        min-width: 300px;
    }
 }

